# approval-automation-vue

./: .gitignore  changelog.md  index.html  package-lock.json  package.json  target_cleanup_reference.md
public/: preview-a.html  preview-c-v2.html  preview-c.html  preview-orange.html
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python/: build.bat  config.json  runner.py
src-tauri/python/src/: __init__.py  approver.py  browser.py  tencent_form.py  webhook.py
src-tauri/src/: main.rs
src/assets/: Thumbs.db
src/components/: LeftPanel.vue  LogDrawer.vue  RightPanel.vue
src/composables/: useMagnetic.ts
