[package]
name = "approval-tool"
version = "0.0.0"
description = "审批自动化工具"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "net"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
